<resources>
    <string name="app_name">GreenTips</string>
    <string name="chooseLang">Choose a language</string>
    <string name="espanol">Español</string>
    <string name="svenska">Svenska</string>
    <string name="polsku">Polski</string>
    <string name="shqip">Shqip</string>
    <string name="english">English</string>
    <string name="francais">Français</string>
    <string name="continueButton">Continue</string>
    <string name="aboutButton">About</string>
    <string name="help">Help</string>
    <string name="chooseCat">Choose a category</string>
    <string name="category">Category</string>

    <string name="aboutapp">
        <b>Welcome to GreenTips!</b>\n
        \nThis application was developed by 6 students at Chalmers Tekniska Högskola in Gothenburg, Sweden.\n
        \nWith the tips and ideas we give to you here, we will help you to reduce you environmental impact and live a healthier life!\n
        \nSimply choose the category you are interested in and we will supply many, simple ways for a greener life.
        \nReceive notifications for reminders and strive for achievements by choosing to have a tip in focus!
    </string>
    <string name="helpcontact"><b>Contact a developer:</b>\n\n
        <b>Alexis Tello:</b>\n
        alexis@student.chalmers.se\n\n
        <b>Cezary Januszek:</b>\n
        januszek@student.chalmers.se\n\n
        <b>Endrit Karpuzi:</b>\n
        karpuzi@student.chalmers.se\n\n
        <b>Firel Issa:</b>\n
        firel@student.chalmers.se\n\n
        <b>Mohammed Al-fatlawi:</b>\n
        mohalf@student.chalmers.se\n\n
        <b>Smedra Touma:</b>\n
        smedra@student.chalmers.se
    </string>


    <string name="transport">Transport</string>
    <string name="outdoors">Outdoors</string>
    <string name="worklife">Working life</string>
    <string name="household">Household</string>
    <string name="sociallife">Social life</string>


    <string name="chooseTip">Choose a tip</string>
    <string name="transporttip1">Here we give information about the first tip, on click open this slide</string>
    <string name="transporttip2">Here we give information about the second tip, on click open this slide</string>
    <string name="transporttip3">Here we give information about the second tip, on click open this slide</string>
    <string name="transporttip4">Here we give information about the second tip, on click open this slide</string>
    <string name="transporttip5">Here we give information about the second tip, on click open this slide</string>
    <string name="transporttip6">Here we give information about the second tip, on click open this slide</string>
    <string name="transporttip7">Here we give information about the second tip, on click open this slide</string>

    <string name="householdtip1">Here we give information about the first tip, on click open this slide</string>
    <string name="householdtip2">Here we give information about the second tip, on click open this slide</string>
    <string name="householdtip3">Here we give information about the second tip, on click open this slide</string>
    <string name="householdtip4">Here we give information about the second tip, on click open this slide</string>
    <string name="householdtip5">Here we give information about the second tip, on click open this slide</string>
    <string name="householdtip6">Here we give information about the second tip, on click open this slide</string>
    <string name="householdtip7">Here we give information about the second tip, on click open this slide</string>

    <string name="worklifetip1">Here we give information about the first tip, on click open this slide</string>
    <string name="worklifetip2">Here we give information about the second tip, on click open this slide</string>
    <string name="worklifetip3">Here we give information about the second tip, on click open this slide</string>
    <string name="worklifetip4">Here we give information about the second tip, on click open this slide</string>
    <string name="worklifetip5">Here we give information about the second tip, on click open this slide</string>
    <string name="worklifetip6">Here we give information about the second tip, on click open this slide</string>
    <string name="worklifetip7">Here we give information about the second tip, on click open this slide</string>

    <string name="socialtip1">Here we give information about the first tip, on click open this slide</string>
    <string name="socialtip2">Here we give information about the second tip, on click open this slide</string>
    <string name="socialtip3">Here we give information about the second tip, on click open this slide</string>
    <string name="socialtip4">Here we give information about the second tip, on click open this slide</string>
    <string name="socialtip5">Here we give information about the second tip, on click open this slide5</string>
    <string name="socialtip6">Here we give information about the second tip, on click open this slide</string>
    <string name="socialtip7">Here we give information about the second tip, on click open this slide</string>

    <string name="outdoorstip1">Here we give information about the first tip, on click open this slide</string>
    <string name="outdoorstip2">Here we give information about the second tip, on click open this slide</string>
    <string name="outdoorstip3">Here we give information about the first tip, on click open this slide</string>
    <string name="outdoorstip4">Here we give information about the first tip, on click open this slide</string>
    <string name="outdoorstip5">Here we give information about the first tip, on click open this slide</string>
    <string name="outdoorstip6">Here we give information about the first tip, on click open this slide</string>
    <string name="outdoorstip7">Here we give information about the first tip, on click open this slide</string>


    <string name="string_green_tips">Green Tips</string>
    <string name="image_for_tips">image for tips</string>
    <string name="reminders">Reminders</string>
    <string name="image_for_reminders">image_for_reminders</string>


    <string name="name_reminder">Name your reminder</string>
    <string name="button_schedule_set">Set</string>
    <string name="button_schedule_cancel">Cancel</string>
    <string name="helpicon">help</string>
    <string name="languageicon">help</string>
    <string name="infoicon">help</string>
    <string name="image_slide">image slide for slide functionality</string>

<<<<<<< HEAD
    <string name="hint_button">Enter Your Task</string>
    <string name="btn_schedule_set">Set</string>
    <string name="btn_schedule_cancel">Cancel</string>

    <string-array name="categories_spinner">
        <item>Transport</item>
        <item>Outdoors</item>
        <item>Social Life</item>
        <item>Work Life</item>
    </string-array>

    <string-array name="id_transport">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="id_outdoors">
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>

    <string-array name="id_social_life">
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
    </string-array>

    <string-array name="id_work_life">
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>
=======

>>>>>>> development1
</resources>