<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".choose_lang">

    <TextView
        android:id="@+id/textView"
        android:layout_width="419dp"
        android:layout_height="734dp"
        android:background="@drawable/home1080x1920"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:layout_width="331dp"
        android:layout_height="65dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="248dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/chooseLang"
        android:textColor="#FFF"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewLang"
        android:layout_width="208dp"
        android:layout_height="200dp"
        android:layout_marginTop="340dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/scrollLayoutLang"
            android:layout_width="138dp"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/english"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:text="@string/english" />

            <Button
                android:id="@+id/swedish"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:text="@string/svenska" />

            <Button
                android:id="@+id/spanish"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:text="@string/espanol" />

            <Button
                android:id="@+id/french"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:text="@string/francais" />

            <Button
                android:id="@+id/arabic"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:text="العربية." />

            <Button
                android:id="@+id/polish"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:text="@string/polsku" />

            <Button
                android:id="@+id/albanian"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:text="@string/shqip" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>