<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transportTips">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/greenback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="313dp"
        android:layout_height="59dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:enabled="false"
        android:text="@string/chooseTip"
        android:textColor="#145317"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="313dp"
        android:layout_height="59dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:enabled="false"
        android:text="@string/transport"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewLTransport"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/scrollLayoutHousehold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="370dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/tip1"
                android:alpha="0.7"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:text="@string/transporttip1" />

            <Button
                android:id="@+id/tip2"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:text="@string/transporttip2" />

            <Button
                android:id="@+id/tip3"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:text="@string/transporttip3" />

            <Button
                android:id="@+id/tip4"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:text="@string/transporttip4" />

            <Button
                android:id="@+id/tip5"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:text="@string/transporttip5" />

            <Button
                android:id="@+id/tip6"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:text="@string/transporttip6" />

            <Button
                android:id="@+id/tip7"
                android:alpha="0.8"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:text="@string/transporttip7" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/homebutton"
        android:alpha="0.8"
        android:background="@drawable/homebutton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:onClick="returnHome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="80dp" />

    <Button
        android:id="@+id/undo"
        android:alpha="0.8"
        android:background="@drawable/undo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="returnButton"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="80dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>