<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenback"
    tools:context=".choose_category">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:enabled="false"
        android:text="@string/chooseCat"
        android:textColor="#145317"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/scrollLayoutCat"
            android:layout_width="238dp"
            android:gravity="center"
            android:layout_marginTop="300dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/idtransport"
                android:alpha="0.7"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="200dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:onClick="gotransport"
                android:text="@string/transport" />

            <Button
                android:id="@+id/idhousehold"
                android:alpha="0.7"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="200dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:onClick="gohousehold"
                android:text="@string/household" />

            <Button
                android:id="@+id/idoutdoors"
                android:alpha="0.7"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="200dp"
                android:layout_marginTop="10dp"
                android:onClick="gooutdoors"
                android:layout_height="wrap_content"
                android:text="@string/outdoors" />

            <Button
                android:id="@+id/idsociallife"
                android:alpha="0.7"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="200dp"
                android:layout_marginTop="10dp"
                android:onClick="gosocial"
                android:layout_height="wrap_content"
                android:text="@string/sociallife" />

            <Button
                android:id="@+id/idworklife"
                android:alpha="0.7"
                android:background="@drawable/rounded_tip_corner"
                android:layout_width="200dp"
                android:onClick="goworklife"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/worklife" />

        </LinearLayout>

    <Button
        android:id="@+id/homebutton"
        android:alpha="0.8"
        android:background="@drawable/homebutton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:onClick="returnHome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="80dp" />

    <Button
        android:id="@+id/undo"
        android:alpha="0.8"
        android:background="@drawable/undo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:onClick="returnActivity"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="80dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>